--- a/api/src/main/resources/application-dev.yaml
+++ b/api/src/main/resources/application-dev.yaml
@@ -9,7 +9,7 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: validate
+      ddl-auto: none
     properties:
       hibernate:
         show_sql: true
@@ -25,7 +25,7 @@ oauth:
       credentials:
         client-id: ${GOOGLE_OAUTH_CLIENT_ID}
         client-secret: ${GOOGLE_OAUTH_CLIENT_SECRET}
-        redirect-uri: http://localhost:8080/oauth/callback
+        redirect-uri: http://mypubcafe.com/oauth/callback
       provider:
         uri:
           user-info: https://www.googleapis.com/oauth2/v2/userinfo
