:wrench: chore: gitignore 항목 추가 (secret, docker 관련 스크립트)

--- a/.gitignore
+++ b/.gitignore
@@ -213,3 +213,10 @@ gradle-app.setting
 *.hprof
 
 # End of https://www.toptal.com/developers/gitignore/api/windows,intellij+all,java,kotlin,gradle
+
+### secret
+**secret.properties
+
+### bat
+# docker
+docker-image-push.bat
