--- a/api/src/main/resources/application-local.yaml
+++ b/api/src/main/resources/application-local.yaml
@@ -15,6 +15,10 @@ spring:
         show_sql: false
         format_sql: true
 
+  sql:
+    init:
+      mode: embedded
+
   h2:
     console:
       enabled: true
