--- a/api/src/main/resources/application.yaml
+++ b/api/src/main/resources/application.yaml
@@ -10,6 +10,10 @@ spring:
       hibernate:
         default_batch_fetch_size: 100
 
+  sql:
+    init:
+      mode: never
+
 logging:
   level:
     root: info
